<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="100sp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/llMarcador">

        <TextView
            android:layout_height="100sp"
            android:layout_width="205sp"
            android:id="@+id/tvLocal"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/local_0"/>

        <TextView
            android:layout_height="100sp"
            android:layout_width="205sp"
            android:id="@+id/tvVisitante"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/visitante_0"/>
    </LinearLayout>


    <ScrollView
        android:layout_height="400sp"
        android:layout_width="match_parent"
        android:id="@+id/svContenido"
        android:layout_below="@+id/llMarcador">

        <LinearLayout
            android:layout_height="400sp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/llPuntuaciones">
        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btReset"
        android:text="@string/reset"
        android:layout_above="@id/llBotones"
        android:onClick="onClickReset" />


    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_height="60sp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btLocal1"
            android:text="@string/local1"
            android:onClick="onClickSumar"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btLocal2"
            android:text="@string/local2"
            android:onClick="onClickSumar"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btLocal3"
            android:text="@string/local3"
            android:onClick="onClickSumar"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btVisitante1"
            android:text="@string/vis1"
            android:onClick="onClickSumar"
            android:layout_marginLeft="35sp"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btVisitante2"
            android:text="@string/vis2"
            android:onClick="onClickSumar"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btVisitante3"
            android:text="@string/vis3"
            android:onClick="onClickSumar"/>

    </LinearLayout>

</RelativeLayout>